ADD: some graphs

--- a/getTextPDF.ipynb
+++ b/getTextPDF.ipynb
@@ -2,15 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[' Society for in Vitro Biology ', ' Outstanding Achievement for Ability and Creativity In Vitro Biology [PROJETO: Potencial fungitóxico de diferentes extratos vegetais sobre o desenvolvimento in vitro do fitopatógeno causador da antracnose em frutos de bananeira - Fase IV] De TOLEDO – PR, Ana Carolina Gonçalves Selva [Estudante] Dionéia Schauren [Orientador(a)] ']\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "import pymongo\n",
     "import re\n",
     "from tika import parser\n",
     "\n",
-    "pdf = parser.from_file('pdfs/premiados_bloco1_2020.pdf')\n",
+    "pdf = parser.from_file('pdfs/premiados_parte1_2021.pdf')\n",
     "# pega o texto do pdf\n",
     "texto = pdf['content']\n",
     "texto = texto.replace('\\n', ' ')\n",
@@ -31,31 +40,33 @@
     "def teste(page):\n",
     "    empresa = texto[page].split('[PRÊMIO]')\n",
     "    premio = empresa[1].split('Os contemplados')\n",
-    "    projeto = premio[1].split('[PROJETO:')[1].split(']')\n",
-    "    projetoJunto = \"]\".join(projeto)\n",
-    "    projeto[1] = projeto[1].replace('–', '-') # mais uma padronizacao\n",
-    "    separator = re.findall('- [A-Z][A-Z] ', projeto[1])\n",
-    "    cidade = projetoJunto.split(separator[0])\n",
-    "    estado = separator[0].split(' ')\n",
+    "    print(empresa)\n",
+    "#     projeto = premio[1].split('[PROJETO:')[1].split(']')\n",
+    "#     projetoJunto = \"]\".join(projeto)\n",
+    "#     projeto[1] = projeto[1].replace('–', '-') # mais uma padronizacao\n",
+    "#     separator = re.findall('- [A-Z][A-Z] ', projeto[1])\n",
+    "#     cidade = projetoJunto.split(separator[0])\n",
+    "#     estado = separator[0].split(' ')\n",
     "    \n",
-    "    alunos = cidade[1].split(\" [Estudante] \")\n",
-    "    orientador = alunos.pop()\n",
-    "    orientador = orientador.split('[Orientador(a)]')\n",
-    "    coorientadores = orientador[1]\n",
+    "#     alunos = cidade[1].split(\" [Estudante] \")\n",
+    "#     orientador = alunos.pop()\n",
+    "#     orientador = orientador.split('[Orientador(a)]')\n",
+    "#     coorientadores = orientador[1]\n",
     "    \n",
-    "    empresa_ = empresa[0].strip()\n",
-    "    premio_ = premio[0].strip()\n",
-    "    projeto_ = projeto[0].split(']')[0].strip()\n",
-    "    cidade[0] = cidade[0].replace('Do', 'De') # sim cara, mais uma\n",
-    "    cidade_ = cidade[0].split(' De ')[1].strip()\n",
-    "    estado_ = estado[1].strip()\n",
+    "#     empresa_ = empresa[0].strip()\n",
+    "#     premio_ = premio[0].strip()\n",
+    "#     projeto_ = projeto[0].split(']')[0].strip()\n",
+    "#     cidade[0] = cidade[0].replace('Do', 'De') # sim cara, mais uma\n",
+    "#     cidade_ = cidade[0].split(' De ')[1].strip()\n",
+    "#     estado_ = estado[1].strip()\n",
     "\n",
-    "    alunos_ = ', '.join(alunos)\n",
-    "    orientador_ = orientador[0]\n",
-    "    coorientador_ = orientador[1].split('[Coorientador(a)]')[0].strip()\n",
+    "#     alunos_ = ', '.join(alunos)\n",
+    "#     orientador_ = orientador[0]\n",
+    "#     coorientador_ = orientador[1].split('[Coorientador(a)]')[0].strip()\n",
     "       \n",
     "    \n",
-    "    return { \"empresa\": empresa_, \"premio\": premio_, \"projeto\": projeto_, \"cidade\": cidade_, \"estado\": estado_, \"alunos\": alunos_, \"orientador\": orientador_, \"coorientador\": coorientador_ }\n"
+    "#     return { \"empresa\": empresa_, \"premio\": premio_, \"projeto\": projeto_, \"cidade\": cidade_, \"estado\": estado_, \"alunos\": alunos_, \"orientador\": orientador_, \"coorientador\": coorientador_ }\n",
+    "print(teste(0))"
    ]
   },
   {
